Add tailwind as a dependancy

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "css": "^2.2.3",
+    "tailwindcss": "^0.6.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
